--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -48,6 +48,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAccount" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="{{ user.profile_picture.url }}" alt="Profile Picture" class="rounded-circle" style="width: 30px; height: 30px; object-fit: cover;">
                                 Hello, {{ user.username }}
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownAccount">
