--- a/templates/accounts/settings.html
+++ b/templates/accounts/settings.html
@@ -1,44 +1,55 @@
 {% extends "store/base.html" %}
 {% block content %}
-    <div class="container">
-        <h1 class="mt-5 mb-4">Account Settings</h1>
-        <form method="POST">
-            {% csrf_token %}
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" value="{{ user.username }}"
-                       required readonly>
+<div class="container">
+    <h1 class="mt-5 mb-4">Account Settings</h1>
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username" name="username" value="{{ user.username }}" required readonly>
+                </div>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name" name="name" value="{{ user.name }}">
+                </div>
+                <div class="mb-3">
+                    <label for="surname" class="form-label">Surname</label>
+                    <input type="text" class="form-control" id="surname" name="surname" value="{{ user.surname }}">
+                </div>
+                <div class="mb-3">
+                    <label for="address" class="form-label">Address</label>
+                    <input type="text" class="form-control" id="address" name="address" value="{{ user.address }}">
+                </div>
+                <div class="mb-3">
+                    <label for="city" class="form-label">City</label>
+                    <input type="text" class="form-control" id="city" name="city" value="{{ user.city }}">
+                </div>
+                <div class="mb-3">
+                    <label for="zip_code" class="form-label">Zip Code</label>
+                    <input type="text" class="form-control" id="zip_code" name="zip_code" value="{{ user.zip_code }}">
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email</label>
+                    <input type="text" class="form-control" id="email" name="email" value="{{ user.email }}">
+                </div>
+                <div class="mb-3">
+                    <label for="phone_number" class="form-label">Phone Number</label>
+                    <input type="text" class="form-control" id="phone_number" name="phone_number" value="{{ user.phone_number }}">
+                </div>
+                <div class="mb-3">
+                    <label for="profile_picture" class="form-label">Profile Picture</label>
+                    <div class="d-flex align-items-center">
+                        <img src="{{ user.profile_picture.url }}" alt="Profile Picture" class="img-thumbnail mb-3" style="max-width: 150px; max-height: 150px;">
+                        <div class="ms-3">
+                            <input type="file" class="form-control" id="profile_picture" name="profile_picture">
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
             </div>
-            <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" name="name" value="{{ user.name }}">
-            </div>
-            <div class="mb-3">
-                <label for="surname" class="form-label">Surname</label>
-                <input type="text" class="form-control" id="surname" name="surname" value="{{ user.surname }}">
-            </div>
-            <div class="mb-3">
-                <label for="address" class="form-label">Address</label>
-                <input type="text" class="form-control" id="address" name="address" value="{{ user.address }}">
-            </div>
-            <div class="mb-3">
-                <label for="city" class="form-label">City</label>
-                <input type="text" class="form-control" id="city" name="city" value="{{ user.city }}">
-            </div>
-            <div class="mb-3">
-                <label for="zip_code" class="form-label">Zip Code</label>
-                <input type="text" class="form-control" id="zip_code" name="zip_code" value="{{ user.zip_code }}">
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="text" class="form-control" id="email" name="email" value="{{ user.email }}">
-            </div>
-            <div class="mb-3">
-                <label for="phone_number" class="form-label">Phone Number</label>
-                <input type="text" class="form-control" id="phone_number" name="phone_number"
-                       value="{{ user.phone_number }}">
-            </div>
-            <button type="submit" class="btn btn-primary" style="margin-bottom: 50px">Save Changes</button>
-        </form>
-    </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
