--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -65,15 +65,15 @@
                             <label for="phone_number" class="form-label">Phone Number*</label>
                             <input type="text" class="form-control" id="phone_number" name="phone_number" required>
                         </div>
-                         <div class="row mb-3">
+                         <div class="row mb-3" hidden>
                             <div class="col">
-                                <label for="profile_picture" class="form-label">Profile Picture</label>
+                                <label for="profile_picture" class="form-label" hidden>Profile Picture</label>
                             </div>
                             <div>
-                                <input type="file" class="form-control" id="profile_picture" name="profile_picture">
+                                <input type="file" class="form-control" id="profile_picture" name="profile_picture" hidden>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Sign Up</b    utton>
+                        <button type="submit" class="btn btn-primary" style="margin-bottom: 50px">Sign Up</button>
                     </form>
                 </div>
             </div>
