--- a/templates/accounts/settings.html
+++ b/templates/accounts/settings.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Save Changes</button>
+                <button type="submit" class="btn btn-primary" style="margin-bottom: 50px">Save Changes</button>
             </div>
         </div>
     </form>
