--- a/templates/store/add_book.html
+++ b/templates/store/add_book.html
@@ -62,9 +62,9 @@
                             <label for="stock" class="form-label">Stock</label>
                             <input type="number" class="form-control" id="stock" name="stock" placeholder="Enter stock">
                         </div>
-                        <div>
-                            <input type="checkbox"class="form-check-input" id="in_stock" name="in_stock" hidden="">
-                            <label class="form-check-label" for="in_stock" hidden>In Stock</label>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="in_stock" name="in_stock">
+                            <label class="form-check-label" for="in_stock">In Stock</label>
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="is_active" name="is_active">
