--- a/templates/store/dashboard.html
+++ b/templates/store/dashboard.html
@@ -74,7 +74,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for order in orders|slice:"-5:" %}
+                            {% for order in orders %}
                                 <tr>
                                     <td>{{ order.id }}</td>
                                     <td>{{ order.created_at }}</td>
