--- a/templates/store/products/category.html
+++ b/templates/store/products/category.html
@@ -5,98 +5,144 @@
 {% endblock %}
 {% block content %}
 
-<style>
-    .card {
-        height: 100%;
-        transition: transform 0.3s ease;
-    }
+    <style>
+        .card {
+            height: 100%;
+            transition: transform 0.3s ease;
+        }
 
-    .card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
 
-    .card img {
-        object-fit: cover;
-        height: 100%;
-        width: 100%;
-    }
+        .card img {
+            object-fit: cover;
+            height: 100%;
+            width: 100%;
+        }
 
-    .card-body {
-        height: 100%;
-    }
+        .card-body {
+            height: 100%;
+        }
 
-    .out-of-stock-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(128, 128, 128, 0.7);
-        color: white;
-        font-size: 1.5rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 1; 
-    }
+        .out-of-stock-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(128, 128, 128, 0.7);
+            color: white;
+            font-size: 1.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 1;
+        }
 
-    .discount-badge {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        background-color: red;
-        color: white;
-        padding: 5px 10px;
-        border-radius: 50%;
-        font-size: 0.8rem;
-    }
+        .discount-badge {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: red;
+            color: white;
+            padding: 5px 10px;
+            border-radius: 50%;
+            font-size: 0.8rem;
+        }
 
-    .disable-animation:hover {
-        transform: translateY(0);
-    }
-</style>
+        .disable-animation:hover {
+            transform: translateY(0);
+        }
 
-<main>
-    <div class="album py-5 bg-light">
-        <div class="container">
-            <div class="pb-3 h5">{{ category.name|title }}</div>
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
-                {% for product in products %}
-                <div class="col" style="margin-bottom: 50px">
-                    <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">
-                        <div class="card shadow-sm {% if product.stock == 0 %} disable-animation {% endif %}">
-                            {% if product.stock == 0 %}
-                                <div class="out-of-stock-overlay">Out of Stock</div>
-                            {% endif %}
-                            <img class="card-img-top banner-image" alt="Responsive image" src="{{ product.image.url }}">
-                            {% if product.discounted_price %}
-                                <div class="discount-badge">{{ product.calculate_discount_percentage }} % off</div>
-                            {% endif %}
-                            <div class="card-body">
-                                <h5 class="card-title">{{ product.title }}</h5>
-                                <p class="card-text">{{ product.author }}</p>
-                                <p class="card-text">
-                                    {% if product.discounted_price %}
-                                        <span class="text-muted"><del>{{ product.price }} RON</del></span><br>
-                                        <span class="text">{{ product.discounted_price }} RON</span>
-                                    {% else %}
-                                        {{ product.price }} RON
-                                    {% endif %}
-                                </p>
-                                {% if product.rating > 0 %}
-                                    <p class="card-text">Rating: {{ product.rating }}⭐</p>
-                                {% else %}
-                                    <p class="card-text">No rating yet</p>
-                                {% endif %}
-                            </div>
-                        </div>
-                    </a>
+        .sorting-form {
+            margin-bottom: 20px;
+        }
+
+        .sorting-form label {
+            margin-right: 10px;
+        }
+
+        .sorting-form select {
+            width: 150px;
+        }
+
+        .sorting-form button {
+            margin-top: 10px;
+        }
+    </style>
+    <main>
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <div class="pb-3 h5">{{ category.name|title }}</div>
+                <div class="sorting-form">
+                    <form id="sortForm" method="GET">
+                        <label for="sort">Order by:</label>
+                        <select name="sort" id="sort" class="form-select">
+                            <option value="default" {% if sort == "default" %}selected{% endif %}>Rating</option>
+                            <option value="price_asc" {% if sort == "price_asc" %}selected{% endif %}>Price (Low to
+                                High)
+                            </option>
+                            <option value="price_desc" {% if sort == "price_desc" %}selected{% endif %}>Price (High to
+                                Low)
+                            </option>
+                            <option value="name_asc" {% if sort == "name_asc" %}selected{% endif %}>Name (A to Z)
+                            </option>
+                            <option value="name_desc" {% if sort == "name_desc" %}selected{% endif %}>Name (Z to A)
+                            </option>
+
+                        </select>
+                    </form>
                 </div>
-                {% endfor %}
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
+                    {% for product in products %}
+                        {% if product.stock > 0 %}
+                            <div class="col" style="margin-bottom: 50px">
+                                <a class="text-dark text-decoration-none" href="{{ product.get_absolute_url }}">
+                                    <div class="card shadow-sm">
+                                        {% if product.stock == 0 %}
+                                            <div class="out-of-stock-overlay">Out of Stock</div>
+                                        {% endif %}
+                                        <img class="card-img-top banner-image" alt="Responsive image"
+                                             src="{{ product.image.url }}">
+                                        {% if product.discounted_price %}
+                                            <div class="discount-badge">{{ product.calculate_discount_percentage }} %
+                                                off
+                                            </div>
+                                        {% endif %}
+                                        <div class="card-body">
+                                            <h5 class="card-title">{{ product.title }}</h5>
+                                            <p class="card-text">{{ product.author }}</p>
+                                            <p class="card-text">
+                                                {% if product.discounted_price %}
+                                                    <span class="text-muted"><del>{{ product.price }} RON</del></span>
+                                                    <br>
+                                                    <span class="text">{{ product.discounted_price }} RON</span>
+                                                {% else %}
+                                                    {{ product.price }} RON
+                                                {% endif %}
+                                            </p>
+                                            {% if product.rating > 0 %}
+                                                <p class="card-text">Rating: {{ product.rating }}⭐</p>
+                                            {% else %}
+                                                <p class="card-text">No rating yet</p>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                </div>
             </div>
         </div>
-    </div>
-</main>
+    </main>
+
+    <script>
+        document.getElementById('sort').addEventListener('change', function () {
+            document.getElementById('sortForm').submit();
+        });
+    </script>
 
 {% endblock %}
