--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>{% block title %}BookStore{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="/static/favicon.PNG">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -61,7 +62,7 @@
                                     {% endif %}
                                 <li><a class="dropdown-item" href="{% url 'store:favorite_products' %}">Favorites List</a>
                                 </li>
-                                <li><a class="dropdown-divider"></li>
+                                <li><a class="dropdown-divider"> </li>
                                 <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                             </ul>
                         </li>
