--- a/templates/store/products/edit_book.html
+++ b/templates/store/products/edit_book.html
@@ -70,10 +70,10 @@
                             <input type="number" class="form-control" id="stock" name="stock" placeholder="Enter stock"
                                    value="{{ product.stock }}">
                         </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="in_stock" name="in_stock"
+                        <div>
+                            <input type="checkbox" class="form-check-input" id="in_stock" name="in_stock" hidden
                                     {% if product.in_stock %} checked {% endif %}>
-                            <label class="form-check-label" for="in_stock">In Stock</label>
+                            <label class="form-check-label" for="in_stock" hidden>In Stock</label>
                         </div>
                         <div class="mb-3 form-check">
                             <input type="checkbox" class="form-check-input" id="is_active" name="is_active"
