--- a/templates/store/add_book.html
+++ b/templates/store/add_book.html
@@ -63,7 +63,7 @@
                             <input type="number" class="form-control" id="stock" name="stock" placeholder="Enter stock">
                         </div>
                         <div>
-                            <input type="checkbox" class="form-check-input" id="in_stock" name="in_stock" hidden>
+                            <input type="checkbox" class="form-check-input" id="in_stock" name="in_stock" hidden checked>
                             <label class="form-check-label" for="in_stock" hidden>In Stock</label>
                         </div>
                         <div class="mb-3 form-check">
