--- a/templates/store/add_book.html
+++ b/templates/store/add_book.html
@@ -67,7 +67,7 @@
                             <label class="form-check-label" for="in_stock" hidden>In Stock</label>
                         </div>
                         <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="is_active" name="is_active">
+                            <input type="checkbox" class="form-check-input" id="is_active" name="is_active" checked>
                             <label class="form-check-label" for="is_active">Is Active</label>
                         </div>
                         <button type="submit" class="btn btn-primary" style="margin-bottom: 50px">Add Book</button>
