--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -65,7 +65,7 @@
             <label for="phone_number" class="form-label">Phone Number*</label>
             <input type="text" class="form-control" id="phone_number" name="phone_number" required>
           </div>
-          <button type="submit" class="btn btn-primary">Sign Up</button>
+          <button type="submit" class="btn btn-primary" style="margin-bottom: 50px">Sign Up</button>
         </form>
       </div>
     </div>
