--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>{% block title %}BookStore{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/static/favicon.PNG">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         .navbar .btn-outline-light:not(:hover) {
             color: #343a40 !important;
@@ -18,56 +18,61 @@
 </head>
 
 <body class="d-flex flex-column vh-100">
-    <header>
-        <nav class="navbar navbar-expand-md navbar-light bg-white border-bottom">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/">BookStore</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+<header>
+    <nav class="navbar navbar-expand-md navbar-light bg-white border-bottom">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">BookStore</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCategories" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Categories
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategories">
-                                <li><a class="dropdown-item" href="{% url "store:product_all" %}">All</a></li>
-                                {% for c in categories %}
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCategories" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            Categories
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownCategories">
+                            <li><a class="dropdown-item" href="{% url "store:product_all" %}">All</a></li>
+                            {% for c in categories %}
                                 <li {% if category.slug == c.slug %}class="selected" {% endif %}>
                                     <a class="dropdown-item" href="{{ c.get_absolute_url }}">{{ c.name|title }}</a>
                                 </li>
-                                {% endfor %}
-                            </ul>
-                        </li>
-                    </ul>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                </ul>
 
-                    {% if user.is_authenticated %}
+                {% if user.is_authenticated %}
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAccount" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                               data-bs-toggle="dropdown" aria-expanded="false">
+                                {% if user.profile_picture %}
+                                    <img src="{{ user.profile_picture.url }}" alt="Profile Picture"
+                                         class="rounded-circle" style="width: 30px; height: 30px; object-fit: cover;">
+                                {% endif %}
                                 Hello, {{ user.username }}
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownAccount">
                                 {% if request.user.is_staff %}
                                     <li><a class="dropdown-item" href="{% url 'store:dashboard' %}">Dashboard</a></li>
-                                    {% endif %}
+                                {% endif %}
                                 <li><a class="dropdown-item" href="{% url 'account_settings' %}">Account Settings</a>
                                 </li>
                                 {% if not request.user.is_staff %}
-                                <li><a class="dropdown-item" href="{% url 'order:my_orders' %}">My Orders</a></li>
-                                    {% endif %}
-                                <li><a class="dropdown-item" href="{% url 'store:favorite_products' %}">Favorites List</a>
+                                    <li><a class="dropdown-item" href="{% url 'order:my_orders' %}">My Orders</a></li>
+                                {% endif %}
+                                <li><a class="dropdown-item" href="{% url 'store:favorite_products' %}">Favorites
+                                    List</a>
                                 </li>
-                                <li><a class="dropdown-divider"> </li>
+                                <li><a class="dropdown-divider"></li>
                                 <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                             </ul>
                         </li>
                     </ul>
-                    {% else %}
+                {% else %}
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'signin' %}">Sign In</a>
@@ -76,50 +81,50 @@
                             <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
                         </li>
                     </ul>
-                    {% endif %}
-                    <a type="button" role="button" href="{% url "basket:basket_summary" %}"
-                        class="btn btn-outline-secondary">
-                        {% with total_qty=basket|length %}
+                {% endif %}
+                <a type="button" role="button" href="{% url "basket:basket_summary" %}"
+                   class="btn btn-outline-secondary">
+                    {% with total_qty=basket|length %}
                         <div id="basket-qty" class="d-inline-flex">
                             {% if total_qty > 0 %}
-                            {{ total_qty }}
+                                {{ total_qty }}
                             {% else %}
-                            0
+                                0
                             {% endif %}
                         </div>
-                        {% endwith %}
+                    {% endwith %}
 
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-cart3" viewBox="0 0 16 16">
-                            <path
-                                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-                        </svg>
-                        Cart
-                    </a>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <div id="content">
-        {% block content %} {% endblock %}
-    </div>
-
-    <footer class="bg-dark text-light py-4 mt-auto">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <p>&copy; 2024 BookStore. Created by Gabriel Nicolescu.</p>
-                </div>
-                <div class="col-md-6 text-end">
-                    <p>Contact us: gabiswitch97@icloud.com</p>
-                </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                         class="bi bi-cart3" viewBox="0 0 16 16">
+                        <path
+                                d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                    </svg>
+                    Cart
+                </a>
             </div>
         </div>
-    </footer>
+    </nav>
+</header>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+<div id="content">
+    {% block content %} {% endblock %}
+</div>
+
+<footer class="bg-dark text-light py-4 mt-auto">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <p>&copy; 2024 BookStore. Created by Gabriel Nicolescu.</p>
+            </div>
+            <div class="col-md-6 text-end">
+                <p>Contact us: gabiswitch97@icloud.com</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
